--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.4",
+    "html2canvas": "^1.3.2",
+    "html2pdf.js": "^0.9.0",
     "js-cookie": "^3.0.1",
     "jsonwebtoken": "^8.5.1",
+    "jspdf": "^2.4.0",
     "moment": "^2.29.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
